# kairo-app

./: .dockerignore  .gitignore  BUILD_LOG.md  Dockerfile  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
backend/: __init__.py  app.py  config.py  demo.py  mcp_server.py  models.py  pipeline.py
backend/capture/: __init__.py  text.py  voice.py
backend/proactive/: __init__.py  digest.py  nudges.py  recall.py  streaks.py
backend/retrieval/: __init__.py  rag.py  rerank.py  search.py
backend/review/: __init__.py  cards.py  scheduler.py
backend/storage/: __init__.py  db.py  files.py  vectors.py
backend/structure/: __init__.py  chunker.py  classifier.py  embedder.py  enricher.py
backend/sync/: __init__.py  client.py  crypto.py  snapshot.py
docs/: APP_STORE_SUBMISSION.md  DEPLOYMENT.md  MCP_SETUP.md  MOBILE_ARCHITECTURE.md  PRIVACY.md  README.md  index.html  privacy.html
docs/explanation/: design-decisions.md  privacy-architecture.md
docs/how-to/: operate-github-pages.md  regenerate-screenshots.md  set-up-cloud-answers.md  sideload-iphone.md
docs/reference/: engine.md  ios-architecture.md
frontend/: app.js  index.html  landing.css  landing.html  landing.js  styles.css
ios/: README.md  project.yml
ios/Kairo/: Info.plist  (+2 more)
proxy/: README.md  worker.js  wrangler.toml
scripts/: deploy-syncserver.sh  deploy_device.sh  expose-backend.sh  make_appicon.py
syncserver/: Dockerfile  __init__.py  app.py  fly.toml
tests/: conftest.py  test_auth.py  test_pipeline.py  test_proactive.py  test_review.py  test_sync.py
(+66 files in other folders)
