[project]
name = "kairo"
version = "0.1.0"
description = "Kairō — a voice-first, privacy-first personal AI memory engine (local web app)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Achyuth Narayan Shanku" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.3",
    "chromadb>=0.5.5",
    "ollama>=0.3.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "mcp>=1.2.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
